<resources>
    <string name="app_name">WatchNext</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="login">Login</string>
    <string name="refer_to_register_page_text">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password_invalid">Password must be at least 8 characters</string>
    <string name="email_invalid">Not an email format</string>
    <string name="back">Back</string>
    <string name="register_title">Register</string>
    <string name="required_field">Required field</string>
    <string name="password_not_match">Password and Confirm password do not match</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="user_name">User Name</string>
    <string name="add_review_title">Add Review</string>
    <string name="description_hint">Description</string>
    <string name="post">Post</string>
    <string name="email">Example@gmail.com</string>
    <string name="my_reviews">My Reviews</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>