<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.users.ReviewDetailsFragment">

    <ImageView
        android:id="@+id/review_details_fragment_review_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.15"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_review_image"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/review_details_fragment_back_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/back_arrow_icon"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="16dp"/>

        <TextView
            android:id="@+id/review_details_fragment_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/review_details_fragment_owner_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:srcCompat="@drawable/blank_profile_picture" />

            <TextView
                android:id="@+id/review_details_fragment_owner_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/review_details_fragment_owner_imageview"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/review_details_fragment_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/review_details_fragment_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/edit"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/review_details_fragment_delete_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/review_details_fragment_edit_button"
                android:text="@string/delete"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/review_details_fragment_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        app:showAnimationBehavior="none"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>