<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    tools:context=".fragments.users.ProfileFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_fragment_back_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:icon="@drawable/back_arrow_icon"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_fragment_edit_profile_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:text="@string/edit" />

    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_fragment_profile_image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/blank_profile_picture" />

    <TextView
        android:id="@+id/profile_fragment_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_profile_image_view"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/profile_fragment_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_username_text_view"
        android:textColor="@color/white"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/profile_fragment_my_posts_chip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/my_reviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_email_text_view"
        app:chipBackgroundColor="@color/red_primary_color"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/profile_fragment_my_posts_swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_my_posts_chip">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_fragment_review_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>