<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/card_background_color"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/review_list_row_card_imageview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:alpha="0.15"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_review_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/review_list_row_card_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/review_list_row_card_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="12sp"
                android:textStyle="normal"
                android:maxLines="5"
                android:ellipsize="end"
                android:padding="2dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/review_list_row_card_imageview"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/review_list_row_owner_imageview"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:srcCompat="@drawable/blank_profile_picture" />

            <TextView
                android:id="@+id/review_list_row_card_owner_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/review_list_row_owner_imageview"
                android:text="@string/user_name"
                android:textSize="12sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>