<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.users.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_profile_fragment_back_arrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    app:icon="@drawable/back_arrow_icon"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="16dp" />

                <TextView
                    android:id="@+id/edit_profile_fragment_edit_profile_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/edit_profile_title"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/edit_profile_fragment_profile_image_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                app:srcCompat="@drawable/blank_profile_picture"
                android:layout_gravity="center_horizontal"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:scaleType="centerCrop"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_fragment_first_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name_hint"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_fragment_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_fragment_last_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/last_name_hint"
                app:errorEnabled="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_fragment_last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_profile_fragment_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:cornerRadius="100dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:text="@string/save" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/edit_profile_fragment_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        app:showAnimationBehavior="none"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>